Wed Nov 27 18:42:47 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-stratt.adb: Added pragma Suppress for range and overflow
	  checks.

	* s-gaseli.adb: Changed the protocol to make it simpler.
	  Changed this stupid protocol one more time.

Tue Nov 26 15:52:33 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-ganobl.adb: Changed the safety delay to be 0.5 seconds.

Sat Nov 23 16:57:56 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Added missing constant.

Thu Nov 21 19:45:25 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Protect against very early internal error which
	  could propagate even when it's not fatal.

	* s-rpc.adb: Do not wait on protected entry in a finalization
	  procedure called during abortion. A flag showing that the result
	  will have to be invalidated when it arrives is set instead, thus
	  providing a much better respect of the semantic of abort (abort
	  very quickly) instead of waiting for the answer. If the answer
	  was there already, it's discarded.

Tue Nov 19 16:56:07 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-garela.adb: New package provided to set usual defaults.

	* s-garopt.adb: Add Set_[...] (Default : [...]) corresponding to
	Get_[...] return [...] in order to set defaults during elaboration
	of a new package system.garlic.elaboration.

	* s-gaprco.adb: Change System.Garlic.Config.Create into
	[...].Initialize.

Wed Nov  6 18:34:57 1996  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gartcp.adb: sin_family was no longer initialized AF_INET.

Tue Oct 29 12:58:51 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-ganobl.adb: Use s-gaosli's C_Errno.

	* s-garnam.adb: Idem.

	* constants.sh (constants): Removed useless constants.

	* Makefile.am: No need for special
	  dependencies with the new mkdep in fact, provided that the
	  Makefile.in that is distributed contains these dependencies !

	* s-garthi.ads: Removed dependency on System.Garlic.Constants.

	* Makefile.am: Added s-gaosli.*.
